--- a/requirements.txt
+++ b/requirements.txt
@@ -12,10 +12,13 @@ certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
 click==8.1.7
+contourpy==1.3.0
 cryptography==43.0.3
+cycler==0.12.1
 deprecation==2.1.0
 exceptiongroup==1.2.2
 fastapi==0.115.5
+fonttools==4.55.0
 frozenlist==1.5.0
 gotrue==2.10.0
 h11==0.14.0
@@ -25,19 +28,24 @@ httpcore==1.0.7
 httpx==0.27.2
 hyperframe==6.0.1
 idna==3.10
+importlib_resources==6.4.5
 joblib==1.4.2
 jose==1.0.0
 jwt==1.3.1
+kiwisolver==1.4.7
+matplotlib==3.9.2
 multidict==6.1.0
 numpy==2.0.2
 packaging==24.2
 passlib==1.7.4
+pillow==11.0.0
 postgrest==0.18.0
 propcache==0.2.0
 pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
 PyJWT==2.10.0
+pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.17
@@ -59,3 +67,4 @@ urllib3==2.2.3
 uvicorn==0.32.0
 websockets==13.1
 yarl==1.17.1
+zipp==3.21.0
